# libamqp

./: .gitignore  .hgignore  .hgtags  BUILDING  CMakeLists.txt  FindUnitTest++.cmake  README  RELEASE-NOTES  TODO  decode-demo.sh  run-jenkins-build.bat  run-jenkins-build.sh
src/: .gdbinit  .gitignore  CMakeLists.txt  Makefile  Makefile.util  ar.serialize  depend.sh  fixup-module-makefiles.sh  kill-test-runner.sh  libamqp.h  run-gcov.sh
src/AmqpClient/: AmqpAssert.h  AmqpContext.h  amqp.h  amqp_misc.h  module.mk
src/AmqpClient/Buffer/: Buffer.c  Buffer.h  BufferTest.cpp  BufferTestSupport.cpp  BufferTestSupport.h  module.mk
src/AmqpClient/Codec/: CodecTestSupport.cpp  CodecTestSupport.h  Convert.c  Convert.h  Decode.c  Decode.h  DecodeBadDataTest.cpp  DecodeCompoundTest.cpp  DecodeIntegerTest.cpp  DecodeNumberTest.cpp  DecodeStringTest.cpp  DecodeSymbolTest.cpp  DecodeZeroByteTypeTest.cpp  Encode.c  Encode.h  EncodeCompoundTest.cpp  EncodeFixedWidthTest.cpp  EncodeFramingTypes.c  EncodeFramingTypes.h  EncodeFramingTypesTest.cpp  (+3 more)
src/DecodeDemo/: decode-demo.c  module.mk
src/LibAmqp/: CMakeLists.txt  break_break.c  config.h  debug_helper.h  libamqp.h  libamqp_common.h  libamqp_win32.h  module.mk  platform_limits.h  todo.h
src/SampleServer/: SampleServer.c  module.mk
src/TemplateModule/: ModuleTest.cpp  ModuleTestSupport.cpp  ModuleTestSupport.h  README  fix_me.sh  module.c  module.h  module.mk
src/Test/: CMakeLists.txt  ExtraChecks.h  SuiteFilter.cpp  SuiteFilter.h  TestHarness.cpp  TestHarness.h  TestMain.cpp  TraceReporter.cpp  TraceReporter.h  module.mk
(+501 files in other folders)
