MACRO(AMQP_MODULE NAME)
  ADD_SUBDIRECTORY(${NAME})
  # obtain list of module files
  GET_DIRECTORY_PROPERTY(AMQP_SOURCES DIRECTORY ${NAME} DEFINITION AMQP_SOURCES)
  GET_DIRECTORY_PROPERTY(AMQP_TEST_SOURCES DIRECTORY ${NAME} DEFINITION AMQP_TEST_SOURCES)

  # add full path to each of the sources
  FOREACH(FILE IN ITEMS ${AMQP_SOURCES})
    LIST(APPEND ${NAME}_SOURCES "${NAME}/${FILE}")
  ENDFOREACH()
  FOREACH(FILE IN ITEMS ${AMQP_TEST_SOURCES})
    LIST(APPEND ${NAME}_TEST_SOURCES "${NAME}/${FILE}")
  ENDFOREACH()
ENDMACRO(AMQP_MODULE)


INCLUDE_DIRECTORIES(LibAmqp Test)

AMQP_MODULE(LibAmqp)

ADD_LIBRARY(LibAmqp
  ${LibAmqp_SOURCES}
)

AMQP_MODULE(Test)

ADD_EXECUTABLE(Test
  ${LibAmqp_TEST_SOURCES}
  ${Test_TEST_SOURCES}
)

TARGET_LINK_LIBRARIES(Test
  LibAmqp
  ${UNITTEST++_LIBRARIES}
)

ADD_TEST(UnitTest++ Test --xml=../output/test-result.xml)

# $Id: CMakeLists.txt,v 1.14 2011/03/16 12:33:34 erk Exp $
